syntax = "proto3";
package jio.brain.proto.knowledge.nugget;

import "jio/brain/proto/base/status.proto";
import "jio/brain/proto/knowledge/base/biz_id.proto";

message AddBizIDsToEntityInstanceRequest {
    uint64 entity_id = 1;
    repeated jio.brain.proto.knowledge.base.BizId alternative_biz_ids = 2;
}

message AddBizIDsToEntityInstanceResponse {
    jio.brain.proto.base.BrainStatus status = 1;
}